(rule
 (targets cordova_safariviewcontroller.ml)
 (deps cordova_safariviewcontroller.mli)
 (action (run %{bin:gen_js_api} %{deps})))

(library
 (public_name cordova-plugin-safariviewcontroller)
 (name cordova_safariviewcontroller)
 (modes byte)
 (libraries gen_js_api js_of_ocaml js_of_ocaml-ppx)
 (preprocess (pps js_of_ocaml-ppx))
)
